# django-simple-admin-email

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
django_simple_admin_email/: __init__.py  admin.py  apps.py  forms.py  models.py
django_simple_admin_email/migrations/: 0001_initial.py
django_simple_admin_email/templates/: email_select.html
